--- a/Project/ui/vegetable_entry.ui
+++ b/Project/ui/vegetable_entry.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1065</width>
-    <height>500</height>
+    <width>700</width>
+    <height>800</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>700</width>
+    <height>600</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>700</width>
+    <height>800</height>
+   </size>
   </property>
   <layout class="QVBoxLayout" name="mainVegEntryLayout">
    <property name="spacing">
@@ -28,6 +40,12 @@
    </property>
    <item>
     <widget class="QTableWidget" name="vegEntryTable">
+     <property name="minimumSize">
+      <size>
+       <width>700</width>
+       <height>300</height>
+      </size>
+     </property>
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
      </property>
@@ -122,8 +140,64 @@
       <property name="spacing">
        <number>10</number>
       </property>
+      <item row="5" column="2">
+       <widget class="QPushButton" name="btnVegCancel">
+        <property name="text">
+         <string>CANCEL ALL</string>
+        </property>
+       </widget>
+      </item>
       <item row="0" column="0">
        <widget class="QPushButton" name="btnVeg1">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QPushButton" name="btnVeg10">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QPushButton" name="btnVeg6">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QPushButton" name="btnVeg5">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="2">
+       <widget class="QPushButton" name="btnVeg12">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2">
+       <widget class="QPushButton" name="btnVeg9">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QPushButton" name="btnVeg4">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QPushButton" name="btnVeg7">
         <property name="text">
          <string>Not Used</string>
         </property>
@@ -136,6 +210,27 @@
         </property>
        </widget>
       </item>
+      <item row="5" column="1">
+       <widget class="QPushButton" name="btnVegOk">
+        <property name="text">
+         <string>OK</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QPushButton" name="btnVeg11">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QPushButton" name="btnVeg8">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
       <item row="0" column="2">
        <widget class="QPushButton" name="btnVeg3">
         <property name="text">
@@ -143,94 +238,31 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="3">
-       <widget class="QPushButton" name="btnVeg4">
+      <item row="5" column="0">
+       <widget class="QPushButton" name="btnVeg16">
         <property name="text">
          <string>Not Used</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QPushButton" name="btnVeg5">
-        <property name="text">
-         <string>Not Used</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QPushButton" name="btnVeg6">
-        <property name="text">
-         <string>Not Used</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="2">
-       <widget class="QPushButton" name="btnVeg7">
-        <property name="text">
-         <string>Not Used</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="3">
-       <widget class="QPushButton" name="btnVeg8">
-        <property name="text">
-         <string>Not Used</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QPushButton" name="btnVeg9">
-        <property name="text">
-         <string>Not Used</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QPushButton" name="btnVeg10">
-        <property name="text">
-         <string>Not Used</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="2">
-       <widget class="QPushButton" name="btnVeg11">
-        <property name="text">
-         <string>Not Used</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="3">
-       <widget class="QPushButton" name="btnVeg12">
-        <property name="text">
-         <string>Not Used</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
+      <item row="4" column="0">
        <widget class="QPushButton" name="btnVeg13">
         <property name="text">
          <string>Not Used</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
-       <widget class="QPushButton" name="btnVeg14">
+      <item row="4" column="2">
+       <widget class="QPushButton" name="btnVeg15">
         <property name="text">
          <string>Not Used</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="2">
-       <widget class="QPushButton" name="btnVegOk">
+      <item row="4" column="1">
+       <widget class="QPushButton" name="btnVeg14">
         <property name="text">
-         <string>OK</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="3">
-       <widget class="QPushButton" name="btnVegCancel">
-        <property name="text">
-         <string>CANCEL ALL</string>
+         <string>Not Used</string>
         </property>
        </widget>
       </item>
