--- a/Project/ui/vegetable_entry.ui
+++ b/Project/ui/vegetable_entry.ui
@@ -82,7 +82,7 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>40</width>
-       <height>10</height>
+       <height>5</height>
       </size>
      </property>
     </spacer>
@@ -111,7 +111,7 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>40</width>
-       <height>10</height>
+       <height>5</height>
       </size>
      </property>
     </spacer>
@@ -137,10 +137,13 @@
       <property name="bottomMargin">
        <number>0</number>
       </property>
-      <property name="spacing">
+      <property name="horizontalSpacing">
        <number>10</number>
       </property>
-      <item row="5" column="2">
+      <property name="verticalSpacing">
+       <number>5</number>
+      </property>
+      <item row="7" column="2">
        <widget class="QPushButton" name="btnVegCancel">
         <property name="text">
          <string>CANCEL ALL</string>
@@ -154,7 +157,7 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
+      <item row="4" column="0">
        <widget class="QPushButton" name="btnVeg10">
         <property name="text">
          <string>Not Used</string>
@@ -175,14 +178,14 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="2">
+      <item row="4" column="2">
        <widget class="QPushButton" name="btnVeg12">
         <property name="text">
          <string>Not Used</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="2">
+      <item row="3" column="2">
        <widget class="QPushButton" name="btnVeg9">
         <property name="text">
          <string>Not Used</string>
@@ -196,7 +199,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
+      <item row="3" column="0">
        <widget class="QPushButton" name="btnVeg7">
         <property name="text">
          <string>Not Used</string>
@@ -210,21 +213,21 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="1">
+      <item row="7" column="1">
        <widget class="QPushButton" name="btnVegOk">
         <property name="text">
          <string>OK</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
+      <item row="4" column="1">
        <widget class="QPushButton" name="btnVeg11">
         <property name="text">
          <string>Not Used</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="3" column="1">
        <widget class="QPushButton" name="btnVeg8">
         <property name="text">
          <string>Not Used</string>
@@ -238,33 +241,59 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
+      <item row="7" column="0">
        <widget class="QPushButton" name="btnVeg16">
         <property name="text">
          <string>Not Used</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="0">
+      <item row="6" column="0">
        <widget class="QPushButton" name="btnVeg13">
         <property name="text">
          <string>Not Used</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="2">
+      <item row="6" column="2">
        <widget class="QPushButton" name="btnVeg15">
         <property name="text">
          <string>Not Used</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
+      <item row="6" column="1">
        <widget class="QPushButton" name="btnVeg14">
         <property name="text">
          <string>Not Used</string>
         </property>
        </widget>
+      </item>
+      <item row="2" column="0" colspan="3">
+       <spacer name="rowSpacer1">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>15</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="5" column="0" colspan="3">
+       <spacer name="rowSpacer2">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>15</height>
+         </size>
+        </property>
+       </spacer>
       </item>
      </layout>
     </widget>
@@ -277,7 +306,7 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>40</width>
-       <height>10</height>
+       <height>5</height>
       </size>
      </property>
     </spacer>
