Add dialog size ratio configuration: dialogs now scale proportionally to maximized main window (0.3-0.7 range) with minimumSize safety floor

--- a/Project/ui/manual_entry.ui
+++ b/Project/ui/manual_entry.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>manualEntryDialog</class>
- <widget class="QWidget" name="manualEntryDialog">
+ <widget class="QDialog" name="manualEntryDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
