--- a/Project/ui/logout_menu.ui
+++ b/Project/ui/logout_menu.ui
@@ -1,174 +1,196 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-  <class>LogoutMenuDialog</class>
-  <widget class="QDialog" name="LogoutMenuDialog">
-    <property name="geometry">
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>380</width>
-        <height>200</height>
-      </rect>
-    </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
+ <class>LogoutMenuDialog</class>
+ <widget class="QDialog" name="LogoutMenuDialog">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>380</width>
+    <height>200</height>
+   </rect>
+  </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="leftMargin">
+    <number>10</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>10</number>
+   </property>
+   <property name="bottomMargin">
+    <number>10</number>
+   </property>
+   <item>
+    <widget class="QFrame" name="customTitleBar">
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <layout class="QHBoxLayout" name="customTitleLayout">
       <property name="leftMargin">
-        <number>10</number>
+       <number>0</number>
       </property>
       <property name="topMargin">
-        <number>0</number>
+       <number>0</number>
       </property>
       <property name="rightMargin">
-        <number>10</number>
+       <number>0</number>
       </property>
       <property name="bottomMargin">
-        <number>10</number>
+       <number>10</number>
       </property>
       <item>
-        <widget class="QFrame" name="customTitleBar">
-          <property name="frameShape">
-            <enum>QFrame::NoFrame</enum>
-          </property>
-          <layout class="QHBoxLayout" name="customTitleLayout">
-            <property name="leftMargin">
-              <number>0</number>
-            </property>
-            <property name="topMargin">
-              <number>0</number>
-            </property>
-            <property name="rightMargin">
-              <number>0</number>
-            </property>
-            <property name="bottomMargin">
-              <number>10</number>
-            </property>
-            <item>
-              <spacer name="titleSpacer">
-                <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                  <size>
-                    <width>40</width>
-                    <height>20</height>
-                  </size>
-                </property>
-              </spacer>
-            </item>
-            <item alignment="Qt::AlignRight|Qt::AlignTop">
-              <widget class="QPushButton" name="customCloseBtn">
-                <property name="text">
-                  <string>×</string>
-                </property>
-                <property name="minimumSize">
-                  <size>
-                    <width>28</width>
-                    <height>28</height>
-                  </size>
-                </property>
-                <property name="maximumSize">
-                  <size>
-                    <width>28</width>
-                    <height>28</height>
-                  </size>
-                </property>
-                <property name="flat">
-                  <bool>true</bool>
-                </property>
-                <property name="toolTip">
-                  <string>Close</string>
-                </property>
-              </widget>
-            </item>
-          </layout>
-        </widget>
+       <spacer name="titleSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
       </item>
-      <item>
-        <widget class="QLabel" name="label_title">
-          <property name="font">
-            <font>
-              <pointsize>20</pointsize>
-              <weight>75</weight>
-              <bold>true</bold>
-            </font>
-          </property>
-          <property name="text">
-            <string>Logout Account</string>
-          </property>
-          <property name="alignment">
-            <set>Qt::AlignCenter</set>
-          </property>
-        </widget>
+      <item alignment="Qt::AlignRight|Qt::AlignTop">
+       <widget class="QPushButton" name="customCloseBtn">
+        <property name="minimumSize">
+         <size>
+          <width>28</width>
+          <height>28</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>28</width>
+          <height>28</height>
+         </size>
+        </property>
+        <property name="toolTip">
+         <string>Close</string>
+        </property>
+        <property name="text">
+         <string>×</string>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
-      <item>
-        <spacer name="spacingTitleButtons">
-          <property name="orientation">
-            <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeType">
-            <enum>QSizePolicy::Fixed</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-            <size>
-              <width>20</width>
-              <height>30</height>
-            </size>
-          </property>
-        </spacer>
-      </item>
-      <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_buttons">
-          <item>
-            <widget class="QPushButton" name="pushButton_cancel">
-              <property name="sizePolicy">
-                <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                </sizepolicy>
-              </property>
-              <property name="minimumSize">
-                <size>
-                  <width>0</width>
-                  <height>50</height>
-                </size>
-              </property>
-              <property name="font">
-                <font>
-                  <pointsize>12</pointsize>
-                </font>
-              </property>
-              <property name="text">
-                <string>Cancel</string>
-              </property>
-            </widget>
-          </item>
-          <item>
-            <widget class="QPushButton" name="pushButton_logout">
-              <property name="sizePolicy">
-                <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                </sizepolicy>
-              </property>
-              <property name="minimumSize">
-                <size>
-                  <width>0</width>
-                  <height>50</height>
-                </size>
-              </property>
-              <property name="font">
-                <font>
-                  <pointsize>12</pointsize>
-                </font>
-              </property>
-              <property name="text">
-                <string>Yes, Logout</string>
-              </property>
-            </widget>
-          </item>
-        </layout>
-      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_title">
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Logout Account</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <spacer name="spacingTitleButtons">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>30</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_buttons">
+     <property name="spacing">
+      <number>20</number>
+     </property>
+     <item>
+      <widget class="QPushButton" name="pushButton_cancel">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>50</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Cancel</string>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>20</width>
+         <height>20</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_logout">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>50</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Yes, Logout</string>
+       </property>
+      </widget>
+     </item>
     </layout>
-  </widget>
-  <resources/>
-  <connections/>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+  </layout>
+ </widget>
+ <resources/>
+ <connections/>
 </ui>
