--- a/Project/ui/vegetable_menu.ui
+++ b/Project/ui/vegetable_menu.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
+    <width>500</width>
     <height>600</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>400</width>
-    <height>450</height>
+    <width>500</width>
+    <height>500</height>
    </size>
   </property>
   <property name="maximumSize">
@@ -122,7 +122,7 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>20</height>
+       <height>50</height>
       </size>
      </property>
     </spacer>
@@ -173,7 +173,7 @@
           </size>
          </property>
          <property name="text">
-          <string>Choose * :</string>
+          <string>ADD or REMOVE :</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -188,11 +188,6 @@
            <height>0</height>
           </size>
          </property>
-         <item>
-          <property name="text">
-           <string>Select vegetable to update</string>
-          </property>
-         </item>
          <item>
           <property name="text">
            <string>Vegetable_1</string>
@@ -298,11 +293,7 @@
         </widget>
        </item>
        <item row="2" column="1">
-        <widget class="QLineEdit" name="inputProductCode">
-         <property name="readOnly">
-          <bool>true</bool>
-         </property>
-        </widget>
+        <widget class="QLineEdit" name="inputProductCode"/>
        </item>
        <item row="1" column="0" colspan="2">
         <spacer name="gridRowSpacer">
@@ -315,7 +306,7 @@
          <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
-           <height>40</height>
+           <height>50</height>
           </size>
          </property>
         </spacer>
@@ -383,12 +374,12 @@
          </item>
          <item>
           <property name="text">
-           <string>Kg</string>
+           <string>KG</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>Pcs</string>
+           <string>EACH</string>
           </property>
          </item>
         </widget>
@@ -614,7 +605,7 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>20</height>
+       <height>25</height>
       </size>
      </property>
     </spacer>
